2011-01-01  Adam Barth  <abarth@webkit.org>

        Remove empty files.

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/generic/BindingFrame.h: Removed.
        * bindings/generic/BindingLocation.h: Removed.

2011-01-01  Konstantin Tokarev  <annulen@yandex.ru>

        Reviewed by Darin Adler.

        Don't include Inspector headers when Inspector is disabled
        https://bugs.webkit.org/show_bug.cgi?id=51789

        * bindings/js/JSDOMWindowBase.cpp: Include Inspector headers when
        Inspector is enabled
        * dom/Document.cpp: Include Inspector headers when
        Inspector is enabled
        (WebCore::Document::recalcStyle): Disabled InspectorInstrumentationCookie
        handling
        * html/HTMLDocument.cpp: Include Inspector headers when
        Inspector is enabled
        * loader/FrameLoader.cpp: Include Inspector headers when
        Inspector is enabled
        * loader/ResourceLoadNotifier.cpp: Include Inspector headers when
        Inspector is enabled
        * page/Chrome.cpp: Include Inspector headers when
        Inspector is enabled
        * page/Console.cpp: Include Inspector headers when
        Inspector is enabled
        * page/ContextMenuController.cpp: Include Inspector headers when
        Inspector is enabled
        * page/DOMWindow.cpp: Include Inspector headers when
        Inspector is enabled
        (WebCore::DOMWindow::dispatchEvent): Disabled InspectorInstrumentationCookie
        handling
        * page/EventHandler.cpp: Include Inspector headers when
        Inspector is enabled
        * page/Page.cpp: Include Inspector headers when
        Inspector is enabled
        * storage/Database.cpp: Include Inspector headers when
        Inspector is enabled
        * workers/AbstractWorker.cpp: Include Inspector headers when
        Inspector is enabled